k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cinescope-service
spec:
  type: ClusterIP
  selector:
    app: cinescope
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
